--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "laravel-vue-pagination": "^2.3.1",
+        "moment": "^2.29.1",
         "sweetalert2": "^9.11.0",
         "vform": "^1.0.1",
         "vue-progressbar": "^0.7.5",
